# seeds

./: .gitignore  README.md  pyproject.toml
assets/: 2026-01-13_random_walk_write.mov
processing/: random_walker_writes.py
